--- a/affiliations.html
+++ b/affiliations.html
@@ -7,46 +7,46 @@
 
 <script language="JavaScript">
     function showform(dowhat) {
-			/*
-			* four DIVS: browse, insert, update, delete
-			* this function sets one visible the others not
-			*/
-			if (dowhat == 'insert'){
-				document.getElementById('browse').style.display = 'none';
-				document.getElementById('insert').style.display = 'block';
-				document.getElementById('update').style.display = 'none';
-				document.getElementById('delete').style.display = 'none';
-			}
-			else if (dowhat == 'update'){
-				document.getElementById('browse').style.display = 'none';
-				document.getElementById('insert').style.display = 'none';
-				document.getElementById('update').style.display = 'block';
-				document.getElementById('delete').style.display = 'none';
-			}
-			else if (dowhat == 'delete'){
-				document.getElementById('browse').style.display = 'none';
-				document.getElementById('insert').style.display = 'none';
-				document.getElementById('update').style.display = 'none';
-				document.getElementById('delete').style.display = 'block';
-			}
-            else if (dowhat == 'all'){
-				document.getElementById('browse').style.display = 'block';
-				document.getElementById('insert').style.display = 'block';
-				document.getElementById('update').style.display = 'block';
-				document.getElementById('delete').style.display = 'block';
-			}
-			else { //by default display browse
-				document.getElementById('browse').style.display = 'block';
-				document.getElementById('insert').style.display = 'none';
-				document.getElementById('update').style.display = 'none';
-				document.getElementById('delete').style.display = 'none';
-			}
-		}
+        /*
+        * four DIVS: browse, insert, update, delete
+        * this function sets one visible the others not
+        */
+        if (dowhat == 'insert') {
+            document.getElementById('browse').style.display = 'none';
+            document.getElementById('insert').style.display = 'block';
+            document.getElementById('update').style.display = 'none';
+            document.getElementById('delete').style.display = 'none';
+        }
+        else if (dowhat == 'update') {
+            document.getElementById('browse').style.display = 'none';
+            document.getElementById('insert').style.display = 'none';
+            document.getElementById('update').style.display = 'block';
+            document.getElementById('delete').style.display = 'none';
+        }
+        else if (dowhat == 'delete') {
+            document.getElementById('browse').style.display = 'none';
+            document.getElementById('insert').style.display = 'none';
+            document.getElementById('update').style.display = 'none';
+            document.getElementById('delete').style.display = 'block';
+        }
+        else if (dowhat == 'all') {
+            document.getElementById('browse').style.display = 'block';
+            document.getElementById('insert').style.display = 'block';
+            document.getElementById('update').style.display = 'block';
+            document.getElementById('delete').style.display = 'block';
+        }
+        else { //by default display browse
+            document.getElementById('browse').style.display = 'block';
+            document.getElementById('insert').style.display = 'none';
+            document.getElementById('update').style.display = 'none';
+            document.getElementById('delete').style.display = 'none';
+        }
+    }
     function newAffiliation() { showform('insert'); }
     function updateAffiliation(pid) { showform('update'); }
-    function deleteAffiliation(pid) { showform ('delete'); }
-    function browseAffiliation() { showform ('browse'); }
-    function showAll() { showform ('all'); }
+    function deleteAffiliation(pid) { showform('delete'); }
+    function browseAffiliation() { showform('browse'); }
+    function showAll() { showform('all'); }
 </script>
 
 <body>
@@ -55,7 +55,7 @@
     </header>
 
     <nav>
-        <a href="index.html" >Home</a>
+        <a href="index.html">Home</a>
         <a href="pokemon.html">Pokemon</a>
         <a href="people.html">People</a>
         <a href="affiliations.html">Affiliations</a>
@@ -65,114 +65,124 @@
         <a href="pokemontypes.html">Pokemon Types</a>
         <a href="pokemonpeople.html">Owned Pokemon</a>
         <a href="peoplebattles.html">Player Battles</a>
-     </nav>
+    </nav>
 
-     <main>
+    <main>
         <section>
             <h2>Affiliations</h2>
 
-            <article id = "affiliations">
-                <p id = "center">
+            <article id="affiliations">
+                <p id="center">
                     Affiliations and ranks of people
                 </p>
 
                 <div id="browse">
-                    <p id = "center"><a href="#" onClick="showAll()">Display all forms</a> | <a href="#" onClick="browseAffiliation()">Hide forms</a><br>
-                      <a href="#" onClick="newAffiliation()">New</a>
+                    <p id="center"><a href="#" onClick="showAll()">Display all forms</a> | <a href="#"
+                            onClick="browseAffiliation()">Hide forms</a><br>
+                        <a href="#" onClick="newAffiliation()">New</a>
                     </p>
 
-                <table border="1" cellpadding="5" id="centerMargin">
-                    <tr>
-                        <th>Affiliation ID</th>
-                        <th>Affiliation Type</th>
-                        <th>Affiliation Rank</th>
-                        <th>Type Description</th>
-                        <th>Edit Entry</th>
-                        <th>Delete Entry</th>
-                    </tr>
-                    <tr>
-                        <td align="right" >1</td>
-                        <td>Team Rocket</td>
-                        <td>Agent</td>
-                        <td>Villainous organization</td>
-                        <td><a href="#" onClick="updateAffiliation('this.affiliationID')">Edit</a></td>
-                        <td><a href="#" onclick="deleteAffiliation('this.affiliationID')">Delete</a></td>
-                    </tr>
-                    <tr>
-                        <td align="right" >2</td>
-                        <td>Trainer</td>
-                        <td>Gym Leader</td>
-                        <td>Elite trainers</td>
-                        <td><a href="#" onClick="updateAffiliation('this.affiliationID')">Edit</a></td>
-                        <td><a href="#" onclick="deleteAffiliation('this.affiliationID')">Delete</a></td>
-                    </tr>
-                    <tr>
-                        <td align="right" >3</td>
-                        <td>Trainer</td>
-                        <td>Apprentice</td>
-                        <td>Standard trainers</td>
-                        <td><a href="#" onClick="updateAffiliation('this.affiliationID')">Edit</a></td>
-                        <td><a href="#" onclick="deleteAffiliation('this.affiliationID')">Delete</a></td>
-                    </tr>
-                </table>
-            </div> <!-- browse -->
-            <p>&nbsp;</p>    
-            <div id="insert" style="display: none">
-                <form method="POST" id="addAffiliation">
-                    <legend><strong>Add Affiliation</strong></legend>
-                      <fieldset class="fields">
-                        <label>* Affiliation Type </label> <input type="text" name="affiliationType" style="margin-bottom: 10px" required>
-                        <br>
-                        <label>* Affiliation Rank </label> <input type="text" name="affiliationRank" style="margin-bottom: 10px" required>
-                        <br>
-                        <label> Type Description </label> <input type="text" name="typeDescription" style="margin-bottom: 10px">
-                        <br>
-                  </fieldset><p id ="center">
-                      <button type="submit" id="addAffiliation">Add Affiliation</button>
-                      <button type="button" onClick="browseAffiliation()">Cancel</button>
-                      </p>
-                    </form> 
-            </div><!-- insert -->
-            <p>&nbsp;</p>
-            <div id="update" style="display: none">
-                <form method="POST" id="updateAffiliation">
-                    <legend><strong>Update Affiliation</strong></legend>
-                      <fieldset class="fields">
-                      <input type="hidden" name="affiliationID" id="updateAffiliationID" value="1">
-                        <label> ID#: </label>  1
-                        <br>
-                        <label> Affiliation Type </label> <input type="text" name="affiliationType" style="margin-bottom: 10px">
-                        <br>
-                        <label> Affiliation Rank </label> <input type="text" name="affiliationRank" style="margin-bottom: 10px">
-                        <br>
-                        <label> Type Description </label> <input type="text" name="typeDescription" style="margin-bottom: 10px">
-                        <br>
-                  </fieldset>
-                  <p id = "center">
-                      <button type="submit" id="UpdateSaveAffiliation">Save Affiliation Updates</button>
-                      <button type="button" onClick="browseAffiliation()">Cancel</button></p>
-                    </form> 
-            </div><!-- update -->
-            <p>&nbsp;</p>
-            <div id="delete" style="display: none">
-                <form method="POST" id="deleteAffiliation">
-                    <legend><strong>Delete Affiliation</strong></legend>
+                    <table border="1" cellpadding="5" id="centerMargin">
+                        <tr>
+                            <th>Affiliation ID</th>
+                            <th>Affiliation Type</th>
+                            <th>Affiliation Rank</th>
+                            <th>Type Description</th>
+                            <th>Edit Entry</th>
+                            <th>Delete Entry</th>
+                        </tr>
+                        <tr>
+                            <td align="right">1</td>
+                            <td>Team Rocket</td>
+                            <td>Agent</td>
+                            <td>Villainous organization</td>
+                            <td><a href="#" onClick="updateAffiliation('this.affiliationID')">Edit</a></td>
+                            <td><a href="#" onclick="deleteAffiliation('this.affiliationID')">Delete</a></td>
+                        </tr>
+                        <tr>
+                            <td align="right">2</td>
+                            <td>Trainer</td>
+                            <td>Gym Leader</td>
+                            <td>Elite trainers</td>
+                            <td><a href="#" onClick="updateAffiliation('this.affiliationID')">Edit</a></td>
+                            <td><a href="#" onclick="deleteAffiliation('this.affiliationID')">Delete</a></td>
+                        </tr>
+                        <tr>
+                            <td align="right">3</td>
+                            <td>Trainer</td>
+                            <td>Apprentice</td>
+                            <td>Standard trainers</td>
+                            <td><a href="#" onClick="updateAffiliation('this.affiliationID')">Edit</a></td>
+                            <td><a href="#" onclick="deleteAffiliation('this.affiliationID')">Delete</a></td>
+                        </tr>
+                    </table>
+                </div> <!-- browse -->
+                <p>&nbsp;</p>
+                <div id="insert" style="display: none">
+                    <form method="POST" id="addAffiliation">
+                        <legend><strong>Add Affiliation</strong></legend>
                         <fieldset class="fields">
-                        <p>Are you sure you want to delete this Affiliation from the database?</p>
-                        <input type="hidden" name="affiliationID" id="deleteAffiliationID" value="1">
-                        <label><strong>ID#: </strong></label> 1
-                        <br>
-                          <label> <strong>Affiliation Type: </strong> </label> Team Rocket
-                          
-                  </fieldset>
-                  <p id = "center">
-                    <button type="submit" id="deleteAffiliation">Delete Affiliation</button>
-                    <button type="button" onClick="browseAffiliation()">Cancel</button>
-                  </p>
-                      </form> 
-              </div><!-- delete -->
+                            <label>* Affiliation Type </label> <input type="text" name="affiliationType"
+                                style="margin-bottom: 10px" required>
+                            <br>
+                            <label>* Affiliation Rank </label> <input type="text" name="affiliationRank"
+                                style="margin-bottom: 10px" required>
+                            <br>
+                            <label> Type Description </label> <input type="text" name="typeDescription"
+                                style="margin-bottom: 10px">
+                            <br>
+                        </fieldset>
+                        <p id="center">
+                            <button type="submit" id="addAffiliation">Add Affiliation</button>
+                            <button type="button" onClick="browseAffiliation()">Cancel</button>
+                        </p>
+                    </form>
+                </div><!-- insert -->
+                <p>&nbsp;</p>
+                <div id="update" style="display: none">
+                    <form method="POST" id="updateAffiliation">
+                        <legend><strong>Update Affiliation</strong></legend>
+                        <fieldset class="fields">
+                            <input type="hidden" name="affiliationID" id="updateAffiliationID" value="1">
+                            <label> ID#: </label> 1
+                            <br>
+                            <label> Affiliation Type </label> <input type="text" name="affiliationType"
+                                style="margin-bottom: 10px">
+                            <br>
+                            <label> Affiliation Rank </label> <input type="text" name="affiliationRank"
+                                style="margin-bottom: 10px">
+                            <br>
+                            <label> Type Description </label> <input type="text" name="typeDescription"
+                                style="margin-bottom: 10px">
+                            <br>
+                        </fieldset>
+                        <p id="center">
+                            <button type="submit" id="UpdateSaveAffiliation">Save Affiliation Updates</button>
+                            <button type="button" onClick="browseAffiliation()">Cancel</button>
+                        </p>
+                    </form>
+                </div><!-- update -->
+                <p>&nbsp;</p>
+                <div id="delete" style="display: none">
+                    <form method="POST" id="deleteAffiliation">
+                        <legend><strong>Delete Affiliation</strong></legend>
+                        <fieldset class="fields">
+                            <p>Are you sure you want to delete this Affiliation from the database?</p>
+                            <input type="hidden" name="affiliationID" id="deleteAffiliationID" value="1">
+                            <label><strong>ID#: </strong></label> 1
+                            <br>
+                            <label> <strong>Affiliation Type: </strong> </label> Team Rocket
+
+                        </fieldset>
+                        <p id="center">
+                            <button type="submit" id="deleteAffiliation">Delete Affiliation</button>
+                            <button type="button" onClick="browseAffiliation()">Cancel</button>
+                        </p>
+                    </form>
+                </div><!-- delete -->
         </section>
-     </main>
-<footer>© 2024 - Elena Parapounsky & Amy Xu</footer>    
+    </main>
+    <footer>© 2024 - Elena Parapounsky & Amy Xu</footer>
 </body>
+
 </html>
