--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </header>
     <nav>
         <a href="index.html">Home</a>
-        <a href="pokemon.html">Pokemon</a>
+        <a href="pokemon.php">Pokemon</a>
         <a href="people.html">People</a>
         <a href="affiliations.html">Affiliations</a>
         <a href="types.html">Types</a>
