Fix navigation link for People

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <nav>
         <a href="index.html">Home</a>
         <a href="pokemon.php">Pokemon</a>
-        <a href="people.html">People</a>
+        <a href="people.php">People</a>
         <a href="affiliations.html">Affiliations</a>
         <a href="types.html">Types</a>
         <a href="battles.html">Battles</a>
