--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Pokemon Management Database</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
     <script src='main.js'></script>
     <meta />
 </head>
