Correct title and header

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Pokemon Management Database</title>
+    <title>Pokemon Database</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -14,7 +14,7 @@
 
 <body>
     <header>
-        <h1>Pokemon Management System Database</h1>
+        <h1>Pokemon Database</h1>
     </header>
     <nav>
         <a href="index.html">Home</a>
