--- a/index.html
+++ b/index.html
@@ -45,7 +45,10 @@
             </article>
         </section>
     </main>
-    <footer>© 2025 - Elena Parapounsky & Amy Xu</footer>
+    <footer>© 2025 - Elena Parapounsky & Amy Xu
+        <br>
+        <a href="https://github.com/eparapounsky/pokemon-database">🔍 Source on GitHub</a>
+    </footer>
 </body>
 
 </html>
